--- a/courses/ml1/lesson1-rf.ipynb
+++ b/courses/ml1/lesson1-rf.ipynb
@@ -171,9 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache using fc-list. This may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -183,21 +191,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jhoward/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from fastai.imports import *\n",
-    "from fastai.structured import *\n",
+    "# from fastai.imports import *\n",
+    "# from fastai.structured import *\n",
     "\n",
     "from pandas_summary import DataFrameSummary\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
@@ -224,11 +223,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data%20Dictionary.xlsx\t\t  Test.csv\t     Train.csv\r\n",
-      "Machine_Appendix.csv\t\t  tmp\t\t     Valid.csv\r\n",
-      "median_benchmark.csv\t\t  TrainAndValid.7z   ValidSolution.csv\r\n",
-      "models\t\t\t\t  TrainAndValid.csv\r\n",
-      "random_forest_benchmark_test.csv  TrainAndValid.zip\r\n"
+      "Data%20Dictionary.xlsx\t\t  Test.csv\t     Train.csv\n",
+      "Machine_Appendix.csv\t\t  tmp\t\t     Valid.csv\n",
+      "median_benchmark.csv\t\t  TrainAndValid.7z   ValidSolution.csv\n",
+      "models\t\t\t\t  TrainAndValid.csv\n",
+      "random_forest_benchmark_test.csv  TrainAndValid.zip\n"
      ]
     }
    ],
@@ -3629,8 +3628,20 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
