--- a/courses/ml1/LESSON1and2-NOTES.ipynb
+++ b/courses/ml1/LESSON1and2-NOTES.ipynb
@@ -22,14 +22,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "import math"
    ]
   },
   {
@@ -116,7 +117,12 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1145,11 +1151,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_raw.SalePrice = np.log(df_raw.SalePrice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         11.097410\n",
+       "1         10.950807\n",
+       "2          9.210340\n",
+       "3         10.558414\n",
+       "4          9.305651\n",
+       "            ...    \n",
+       "401120     9.259131\n",
+       "401121     9.305651\n",
+       "401122     9.350102\n",
+       "401123     9.104980\n",
+       "401124     8.955448\n",
+       "Name: SalePrice, Length: 401125, dtype: float64"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_raw.SalePrice"
    ]
   },
   {
@@ -1187,7 +1229,12 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1233,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,8 +1395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1747,7 +1799,7 @@
        "[401125 rows x 66 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1830,9 +1882,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((389125, 66), (389125,), (12000, 66))"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# split raw df into train and val sets, val set contains most recent values\n",
     "def split_vals(a,n):\n",
@@ -1844,6 +1907,7 @@
     "X_train, X_valid = split_vals(df,n_train)\n",
     "y_train, y_valid = split_vals(y,n_train)\n",
     "\n",
+    "X_train.shape, y_train.shape, X_valid.shape\n",
     "# a = np.array([1,2,3,4,5,6,7,8,9]) # figuring out what split_vals does\n",
     "# split_vals(a,3)"
    ]
@@ -1857,12 +1921,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def rmse(x,y):\n",
-    "    return math.sqrt(((x-y)**2))"
+    "def rmse(x,y): return math.sqrt(((x-y)**2).mean())\n",
+    "\n",
+    "def print_score(m):\n",
+    "    res = [rmse(m.predict(X_train), y_train), rmse(m.predict(X_valid), y_valid),\n",
+    "                m.score(X_train, y_train), m.score(X_valid, y_valid)]\n",
+    "    if hasattr(m,'oob_score_'): res.append(m.oob_score_)\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/JI/miniconda2/envs/fastai_ml/lib/python3.6/site-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 40s, sys: 877 ms, total: 1min 41s\n",
+      "Wall time: 33.9 s\n",
+      "[0.09050009786847515, 0.25139148711010156, 0.982882792166662, 0.8871376449956733]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = RandomForestRegressor(n_jobs=-1)\n",
+    "%time m.fit(X_train,y_train)\n",
+    "print_score(m)"
    ]
   },
   {
