--- a/courses/ml1/lesson2-rf_interpretation_mod.ipynb
+++ b/courses/ml1/lesson2-rf_interpretation_mod.ipynb
@@ -2207,7 +2207,7 @@
    ],
    "source": [
     "enc_summ = enc_summ[~pd.isnull(enc_summ.SalePrice)]\n",
-    "enc_summ.plot('Enclosure', 'SalePrice', 'barh', xlim=(0,11));"
+    "enc_summ.plot('Enclosure', 'SalePrice', 'barh', xlim=(0,11))"
    ]
   },
   {
@@ -4035,5 +4035,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
