--- a/courses/ml1/L_3_and4_NOTES-INTERPRET.ipynb
+++ b/courses/ml1/L_3_and4_NOTES-INTERPRET.ipynb
@@ -1783,6 +1783,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Important hyperparameters\n",
+    "\n",
+    "- **set_rf_samples** - how many samples in each tree\n",
+    "- depth of the tree is log_base2(sample_size) b/c binary decision\n",
+    "- linear relationship b/w # of leaf nodes and size of sample\n",
+    "- **min_samples_leaf**, each time we double we remove one layer from the tree, so with 2 leafs, would be log_base2(sample_size)-1\n",
+    "- **max_features**: at each split point in a tree we take the specified # of features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validation set diagnostic\n",
+    " - Two reasons why val set might not be as good as the training set\n",
+    "     1. model is overfitting, either use OOB score or use a 2nd val set randomly sampled - if those get much worse, overfitting\n",
+    "     2. asdf\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### one-hot encoding\n",
+    "- use it to see how model's feature importances change. Model may or may not improve."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
