--- a/courses/ml1/L_1and2_NOTES.ipynb
+++ b/courses/ml1/L_1and2_NOTES.ipynb
@@ -2441,7 +2441,8 @@
    "source": [
     "### Out of Bag\n",
     "When your dataset is small, so you don't have enough to create a validation set - you can take the unused samples from each tree and train a sort of validation set from that.\n",
-    "- don't use oob_score when you use set_rf_samples (below) because you'll take the rest of the samples (in a large dataset this defeats the purpose of sampling) and you use set_rf_samples to subsample a huge dataset. At that point better to just create a validation set"
+    "- don't use oob_score when you use set_rf_samples (below) because you'll take the rest of the samples (in a large dataset this defeats the purpose of sampling) and you use set_rf_samples to subsample a huge dataset. At that point better to just create a validation set\n",
+    "-oob score is on avg less good than validation set score b/c it uses a subset of the trees. The validation set score is based on the trained models all the trees in the ensemble"
    ]
   },
   {
