--- a/courses/ml1/L_3_and4_NOTES-INTERPRET.ipynb
+++ b/courses/ml1/L_3_and4_NOTES-INTERPRET.ipynb
@@ -1543,7 +1543,8 @@
     "- look at top10 features and try to understand more deeply\n",
     "- removing reduntant cols might make predictions a little bit better, also removing colinearity (cols related to each other)\n",
     "- Feature Importance: take one col and randomly shuffle so it has no relationship to the dependent variable. Then run predictions on the trained model\n",
-    "- look at the features that are orders of magnitude better than the others (rather than having a top 3/10 rule)"
+    "- look at the features that are orders of magnitude better than the others (rather than having a top 3/10 rule)\n",
+    "- importance means it's a lever we can change to impact our model for "
    ]
   },
   {
@@ -2334,7 +2335,8 @@
     "- removes externalities, each line is one row of data with the year being held constant\n",
     "- similar to feature importance, key difference being keeping the col all the same with constant value rather than randomly shuffling\n",
     "- using already fit RF model, passing in a new year, all YearMade rows being the same\n",
-    "- dark line is the average, linear trend, no dip like before"
+    "- dark line is the average, linear trend, no dip like before\n",
+    "- each line is one row of the data at each of the different years\n"
    ]
   },
   {
@@ -2411,6 +2413,13 @@
    ],
    "source": [
     "plot_pdp('YearMade', clusters=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**main take-away is that the relationship between YearMade and log(Saleprice) is linear (actual exponential)**"
    ]
   },
   {
@@ -2801,7 +2810,8 @@
     "- for each split in the random forest, you get an avg value for the dependent variable. Tree interpreter shows how each feature split adds/subtracts to the final value of the dependent (waterfall chart)\n",
     "- allows us to take a particular row and gives back prediction, bias (avg sale price across original dataset)\n",
     "- contributions: how each feature split affects final value (adds/subtracts to the final prediction)\n",
-    "    - summing all the contributions + bias gives prediction"
+    "    - summing all the contributions + bias gives prediction\n",
+    "- pandas sets nan to -1, fastai adds 1 to make them 0"
    ]
   },
   {
@@ -3771,6 +3781,20 @@
     "- **what is downside of cross validation?**\n",
     "    - will take lot of time on a large dataset\n",
     "    - random validation set might not be useful in temporal use cases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Notes of NaNs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- missing values can tell us a lot! don't remove them, but rather learn from them!"
    ]
   },
   {
