rf from scratch

--- a/courses/ml1/L_3_and4_NOTES-INTERPRET.ipynb
+++ b/courses/ml1/L_3_and4_NOTES-INTERPRET.ipynb
@@ -3787,6 +3787,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- **how big should validation set be?**\n",
+    "    - how accurate do you need the model to be?\n",
+    "    - it needs to be however big it needs to be so that your accuracy is insightful for the particular business problem\n",
+    "    - have at least 22 (approx starts looking normal) of each class in any of the sets\n",
+    "    - train 5 models and see how the validation accuracy changes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **what is binomial dist?**\n",
+    "    - two choices\n",
+    "    - n samples, p probability\n",
+    "    - avg: n * p\n",
+    "    - std: n * p * (1-p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Notes of NaNs"
    ]
   },
