--- a/courses/ml1/L_5and6and7_NOTES.ipynb
+++ b/courses/ml1/L_5and6and7_NOTES.ipynb
@@ -411,9 +411,38 @@
     "    that has the lowest score\n",
     "    '''\n",
     "    x,y = self.x.values[self.idxs,var_idx], self.y[self.idxs]\n",
-    "    lhs = x\n",
-    "    rhs = "
+    "    for i in range(1,self.rows):   \n",
+    "        lhs = x<x[i]\n",
+    "        rhs = x>x[i]\n",
+    "        if rhs.sum()==0: continue\n",
+    "        lhs_std = y[lhs].std()\n",
+    "        rhs_std = y[rhs].sted()\n",
+    "        curr_score = lh"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Speeding things up\n",
+    "- computational complexity of find_better_split() is n^2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = TreeEnsemble(x_sub,y_train,1,1000).trees[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -836,6 +865,34 @@
     "    - gradiant boosting machine\n",
     "        - still can't extrapolate to the future, but deal with time dependent variables better"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computational Complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Steps:\n",
+    "- is there a loop? (n)\n",
+    "- is there loop inside loop? \n",
+    "    - if yes multiple by n\n",
+    "    - if no, is there a sort(nlogn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
